2009-09-20 Alexander Malysh <amalysh at kannel.org>
    * gw/msg.c: fixed crash when wrong packet received on bearerbox port.
      Thanks to Michael Zervakis <michael at zervakis.com> for report.
      [Msg-Id: <4AB3A08C.3050408@zervakis.com>]

2009-09-17  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide.xml: document the 'smsc = loopback' type.
    * gw/smscconn[_p].[ch]: add the loopback SMSC type to the internal 
      structures.
    * gw/smsc/smsc_loopback.c: add loopback SMSC type module.
      [Msg-Id: <4A4B9245.1030705@tolj.org>]

2009-09-04 Alexander Malysh <amalysh at kannel.org>
    * aclocal.m4, configure, configure.in, gw/dlr_mysql.c, gwlib/dbpool_mysql.c,
      test/test_dbpool.c: implemented select/update function calls for dbpool_mysql. This
      require mysql prepared statement support and therefore mysql version >= 4.1.
      Changed dlr_mysql to use these new function calls. This fixes #258.

2009-09-03 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.c: fixed memory leak.

2009-09-02 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c, test/drive_smpp.c,
      test/drive_smpp.conf, test/test_smsc.c: implemented smsc-id config option for smpp-tlv group.

2009-09-01 Alexander Malysh <amalysh at kannel.org>
    * gw/bearerbox.c: fixed memory leak

2009-08-31 Alejandro Guerrieri <aguerrieri at kannel.org>
    * gw/bb_smscconn.c, gw/bearerbox.c, gw/bearerbox.h,
      doc/userguide/userguide.xml: limit of 1M messages on outgoing queue limit
      documented. Small code cleanup.

2009-08-28 Andreas Fink <andreas at fink.org>
    * util/start-stop-daemon.c: fix compilation under MacOS X 10.6

2009-08-28 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: always initialize msgdata because too many parts in
      kannel expect msgdata non NULL.

2009-08-24 Alexander Malysh <amalysh at kannel.org>